# bs4-token-ext

./: README.md  pyproject.toml
src/: __init__.py  main.py
src/bs4_token_ext/: __init__.py
tests/: test_token_aware_beautifulsoup.py
