[project]
name = "bs4-token-ext"
version = "0.0.2"
license = {text = "MIT"}
description = "Add your description here"
readme = "README.md"
keywords = ["beautifulsoup", "token", "llm", "tiktoken", "web-scraping"]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "tiktoken>=0.12.0",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=8.4.2",
    "twine>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bs4_token_ext"]
